--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10229,3 +10229,11 @@ body,
   min-height: 200px;
 }
 
+.btn.disabled,
+.btn:disabled {
+  cursor: not-allowed;
+  opacity: .65;
+  color: black;
+  background-color: white;
+}
+
