--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
+@import url("https://use.fontawesome.com/releases/v5.0.1/css/all.css");
 
 @import "~bootstrap/scss/bootstrap";
 
@@ -8,4 +9,5 @@
 @import "variables";
 @import "font";
 @import "custom";
+
 
