--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10267,6 +10267,7 @@ body,
   display: table;
   margin: 0;
   color: #000;
+  font-family: "nta", Arial, sans-serif;
   font-weight: 400;
   text-transform: none;
   font-size: 14px;
@@ -10285,6 +10286,7 @@ body,
   display: inline-block;
   margin: 0 8px 0 0;
   padding: 2px 5px 0;
+  font-family: "nta", Arial, sans-serif;
   font-weight: 700;
   text-transform: none;
   font-size: 14px;
@@ -10326,6 +10328,7 @@ body,
   display: table;
   margin: 0;
   color: #000;
+  font-family: "nta", Arial, sans-serif;
   font-weight: 400;
   text-transform: none;
   font-size: 14px;
@@ -10346,6 +10349,7 @@ body,
   display: inline-block;
   margin: 0 8px 0 0;
   padding: 2px 5px 0;
+  font-family: "nta", Arial, sans-serif;
   font-weight: 700;
   text-transform: none;
   font-size: 14px;
@@ -10376,6 +10380,7 @@ body,
   display: inline-block;
   margin: 0 8px 0 0;
   padding: 2px 5px 0;
+  font-family: "nta", Arial, sans-serif;
   font-weight: 700;
   text-transform: none;
   font-size: 14px;
