updates to add prayer times

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10252,6 +10252,20 @@ body,
   background-color: white;
 }
 
+.help-the-project {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.prayer-times {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.prayer-times .card {
+  padding: 10px;
+}
+
 .phase-banner {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3;
